<resources>
    <string name="app_name">TQuietSHPP</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="auth_main">"Let's get acquainted"</string>
    <string name="auth_instruction">Fill out the profile and go to the application!</string>
    <string name="auth_terms">By clicking Register you agree\nto our Terms and Conditions</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me!</string>
    <string name="auto_login">auto login</string>
    <string name="please_enter_valid_email">Please enter valid email address</string>
    <string name="please_enter_valid_password">Please enter atleast 5 characters</string>
    <string name="contacts">Contacts</string>
    <string name="contact_removed">contact has been removed</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="view_my_contacts">View my contacts</string>
    <string name="login_help_tip">\"Try mail@pm.me : 11111 \"</string>
    <string name="add_contact">Add contact</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="occupation">Occupation</string>
    <string name="add_back">Add back</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="career">Career</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="save">SAVE</string>
    <string name="remove">Remove</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="hello">Hello!</string>
    <string name="enter_your_email_and_password_below">Enter your email and password below</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="show_unknown_error">Something went wrong</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="select_date">Select date</string>
</resources>