<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/contactsFragment">

    <fragment
        android:id="@+id/contactsFragment"
        android:name="tk.quietdev.level1.ui.contacts.ContactsFragment"
        android:label="@string/contacts">
        <action
            android:id="@+id/action_contactsFragment_to_contactDetailFragment"
            app:destination="@id/contactDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/contactDetailFragment"
        android:name="tk.quietdev.level1.ui.contacts.ContactDetailFragment"
        android:label="@string/profile">
        <argument
            android:name="email"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_contactDetailFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="tk.quietdev.level1.ui.contacts.EditProfileFragment"
        android:label="@string/edit_profile">
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>
</navigation>