<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Base.Theme.MyApp.WhiteSurface"
    app:cardCornerRadius="@dimen/small_8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNameParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"

            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etSurnameParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            app:layout_constraintTop_toBottomOf="@id/etNameParent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etOccupationParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/occupation"
            app:layout_constraintTop_toBottomOf="@id/etSurnameParent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bntCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_8dp"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etOccupationParent">
        </Button>


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bntCancel">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>



