<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/containerMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_8dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/normal_16dp"
        app:layout_constraintBottom_toTopOf="@+id/containerEditables"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <TextView
            android:id="@+id/tvMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_main"
            android:textAlignment="center"
            android:textSize="@dimen/H1_24sp" />

        <TextView
            android:id="@+id/tvHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/auth_instruction"
            android:textAlignment="center"
            android:textSize="@dimen/H4_12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerEditables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_8dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/normal_16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerMessage">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/etPasswordParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_16dp"
        android:text="@string/remember_me"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/H2_18sp"

        app:layout_constraintEnd_toStartOf="@id/tvForgotPassword"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerEditables"
         />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/forgot_your_password"
        android:layout_marginHorizontal="@dimen/normal_16dp"
        android:textSize="@dimen/H3_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cbRemember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cbRemember"
        app:layout_constraintTop_toBottomOf="@id/containerEditables" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_16dp"
        android:layout_marginVertical="@dimen/small_8dp"
        android:padding="@dimen/normal_16dp"
        android:text="@string/register"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTerms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="?attr/colorSecondary"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_16dp"
        android:layout_marginHorizontal="@dimen/normal_16dp"
        android:text="@string/auth_terms"
        android:textAlignment="center"
        android:textSize="@dimen/H4_12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


