<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSurface"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containerMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_8dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/normal_16dp"
        app:layout_constraintBottom_toTopOf="@+id/containerEditables"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textSize="@dimen/header1_24sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_8dp"
            android:text="@string/enter_your_email_and_password_below"
            android:textAlignment="center"
            android:textSize="@dimen/header4_12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containerEditables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_8dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/normal_16dp"
        app:layout_constraintBottom_toTopOf="@+id/cbRemember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerMessage">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailParent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorTextColor="?attr/colorOnError">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="?colorOnSurface" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordParent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorTextColor="?attr/colorOnError">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?colorOnSurface" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <CheckBox
        android:id="@+id/cbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_16dp"
        android:text="@string/remember_me"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/header2_18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toStartOf="@id/tvForgotPassword"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerEditables" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_16dp"
        android:ellipsize="end"
        android:text="@string/forgot_your_password"
        android:textSize="@dimen/header3_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cbRemember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cbRemember"
        app:layout_constraintTop_toBottomOf="@id/containerEditables" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_16dp"
        android:layout_marginVertical="@dimen/small_8dp"
        android:padding="@dimen/normal_16dp"
        android:text="@string/login"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="?attr/colorSecondary"
        app:strokeWidth="2dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_16dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorHint"
        android:textSize="@dimen/header3_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvLinkSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLinkSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="@dimen/header3_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvHaveAccount"
        app:layout_constraintTop_toTopOf="@id/tvHaveAccount" />


    <FrameLayout
        android:id="@+id/progressCircular"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC434343"
        android:clickable="true"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


